--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,11 @@
 .body {
-  background: linear-gradient(#2e2d2d, #1d48bde4);
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient(170deg, #000000a2, #8609e5);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .card {
